  using "," as decimal character (and ";" as column delimiter)
- "leverage" command: add a --quiet option and add calculation of the
  cross-validation criterion (available via the $test accessor)
- "rmplot" command (range-mean plot): add a --trim option to discard the
  minimum and maximum from each sub-sample
- "gnuplot" command: enhance the --with-lines option to permit using
  lines for some series and point for others
- new function simann() provides user access to simulated annealing
- Speed up the production of bootstrapped confidence bands for impulse 
  responses in VECM models
- Online help: ensure that option flags don't break across lines (and
  also colorize them for emphasis)
- Cointegration testing: treat restricted exogenous terms as per Ox and
  PcGive (don't lag them in the initial OLS regressions)
- Fix bug: breakage in mle when a "genr" line in the mle block assigns
  a new value to a submatrix
- Fix bug: possible crash in tsls when there are missing values and a
  regressor is all-zero at the complete observations
- Fix bug: "summary" command with --by option not respecting the
  incoming sample range
- Fix bug: filename encoding and dates recognition issues with the new
  xlsx data importer; also try harder to find sheet names/numbers
- Fix bug: segfault on running certain commands via the GUI after
  replacing the previous dataset with a new one
- Fix bug: crash on accessing a bundle via its icon if the bundle was
  replaced while the Icon view window was open
- Fix bug: crash on using the --quiet option with the "freq" command
  in a command loop
- Fix bug: breakage in processing the selection of quantiles for 
  quantile regression in the GUI
- Fix bug: the third argument to eigsolve() was rejected even when it
  was valid
- Fix bug: the option of providing a named list of series as the left-
  hand term in a GMM orthogonality condition was not fully implemented

2011-10-17 version 1.9.6